// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup renders correctly 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      Welcome to Hylo
    </h1>
    <p
      data-stylename="blurb"
    >
      Stay connected, organized, and engaged with your group.
    </p>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="name"
      >
        Full name
      </label>
      <TextInput
        aria-label="name"
        autoFocus={true}
        data-stylename="authInput"
        id="name"
        inputRef={[Function]}
        label="name"
        name="name"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="email"
      >
        Your email address
      </label>
      <TextInput
        aria-label="email"
        data-stylename="authInput"
        id="email"
        inputRef={[Function]}
        label="email"
        name="email"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="password"
      >
        Password
      </label>
      <TextInput
        aria-label="password"
        data-stylename="authInput"
        id="password"
        label="password"
        name="password"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        type="password"
      />
    </div>
    <Button
      data-stylename="submit"
      label="Sign Up"
      onClick={[Function]}
    />
  </div>
  <div>
     Or 
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Signup renders correctly with mobile redirect 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <DownloadAppPortal
      url="some.url"
    />
    <h1
      data-stylename="title"
    >
      Welcome to Hylo
    </h1>
    <p
      data-stylename="blurb"
    >
      Stay connected, organized, and engaged with your group.
    </p>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="name"
      >
        Full name
      </label>
      <TextInput
        aria-label="name"
        autoFocus={true}
        data-stylename="authInput"
        id="name"
        inputRef={[Function]}
        label="name"
        name="name"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="email"
      >
        Your email address
      </label>
      <TextInput
        aria-label="email"
        data-stylename="authInput"
        id="email"
        inputRef={[Function]}
        label="email"
        name="email"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="password"
      >
        Password
      </label>
      <TextInput
        aria-label="password"
        data-stylename="authInput"
        id="password"
        label="password"
        name="password"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        type="password"
      />
    </div>
    <Button
      data-stylename="submit"
      label="Sign Up"
      onClick={[Function]}
    />
  </div>
  <div>
     Or 
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;
